--- a/index.html
+++ b/index.html
@@ -3,17 +3,29 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>React.js JSX Contact List Application!</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>React.js Contact List Application!</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
 
 <body>
-    <div class="container">React.js JSX Counter</div>
-    <div id="app"></div> <!-- tu będzie wyświetlona cała reactowa aplikacja -->
+    <div class="container">
+        <p>Contact Application React.js JSX</p>
+        <div id="app"></div> <!-- tu będzie wyświetlona cała reactowa aplikacja -->
+    </div>
+    <footer>
+        <p>Copyright by Aleksandra Garlikowska 2019</p>
+    </footer>
+
+
     <script src="https://github.com/babel/babel-standalone/releases/download/release-6.26.0/babel.min.js"></script>
+    <!-- bez tego nie zadziała JSX-->
     <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script> <!-- ładuje bibliotekę reacta -->
     <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script><!-- wyświetla elementy stworzone za pomocą reacta w oknie przeglądarki -->
+    <script type="text/javascript" src="components/ContactForm.js"></script>
+    <script type="text/javascript" src="components/Contact.js"></script>
+    <script type="text/javascript" src="components/Contacts.js"></script>
+    <script type="text/javascript" src="components/App.js"></script>
     <script type="text/javascript" src="script.js"></script>
 </body>
 
