--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
     </footer>
 
 
-    <script src="https://github.com/babel/babel-standalone/releases/download/release-6.26.0/babel.min.js"></script>
-    <!-- bez tego nie zadziała JSX-->
+
     <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script> <!-- ładuje bibliotekę reacta -->
     <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script><!-- wyświetla elementy stworzone za pomocą reacta w oknie przeglądarki -->
-    <script type="text/javascript" src="components/ContactForm.js"></script>
-    <script type="text/javascript" src="components/Contact.js"></script>
-    <script type="text/javascript" src="components/Contacts.js"></script>
-    <script type="text/javascript" src="components/App.js"></script>
-    <script type="text/javascript" src="script.js"></script>
+    <script src="https://github.com/babel/babel-standalone/releases/download/release-6.26.0/babel.min.js"></script>
+    <!-- bez tego nie zadziała JSX-->
+    <script type="text/babel" src="components/ContactForm.jsx"></script>
+    <script type="text/babel" src="components/Contact.jsx"></script>
+    <script type="text/babel" src="components/App.jsx"></script>
+    <script type="text/babel" src="script.js"></script>
+
 </body>
 
 </html>
