--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <!-- bez tego nie zadziała JSX-->
     <script type="text/babel" src="components/ContactForm.jsx"></script>
     <script type="text/babel" src="components/Contact.jsx"></script>
+    <script type="text/babel" src="components/Constacts.jsx"></script>
     <script type="text/babel" src="components/App.jsx"></script>
     <script type="text/babel" src="script.js"></script>
 
