--- a/index.html
+++ b/index.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <title>React.js Contact List Application!</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <div class="container">
-        <p>Contact Application React.js JSX</p>
-        <div id="app"></div> <!-- tu będzie wyświetlona cała reactowa aplikacja -->
+      <p>Contact Application React.js JSX</p>
+      <div id="app"></div>
+      <!-- tu będzie wyświetlona cała reactowa aplikacja -->
     </div>
     <footer>
-        <p>Copyright by Aleksandra Garlikowska 2019</p>
+      <p>Copyright by Aleksandra Garlikowska 2019</p>
     </footer>
 
-
-
-    <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script> <!-- ładuje bibliotekę reacta -->
-    <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script><!-- wyświetla elementy stworzone za pomocą reacta w oknie przeglądarki -->
+    <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
+    <!-- ładuje bibliotekę reacta -->
+    <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script
+    ><!-- wyświetla elementy stworzone za pomocą reacta w oknie przeglądarki -->
     <script src="https://github.com/babel/babel-standalone/releases/download/release-6.26.0/babel.min.js"></script>
     <!-- bez tego nie zadziała JSX-->
     <script type="text/babel" src="components/ContactForm.jsx"></script>
     <script type="text/babel" src="components/Contact.jsx"></script>
-    <script type="text/babel" src="components/Constacts.jsx"></script>
+    <script type="text/babel" src="components/Contacts.jsx"></script>
     <script type="text/babel" src="components/App.jsx"></script>
     <script type="text/babel" src="script.js"></script>
-
-</body>
-
+  </body>
 </html>
